# wordgame

./: CMakeLists.txt  README.md  allnouns.txt  client.c  game.c  gameserver.c  server.c
include/: chat_message.h  chat_refresh_thread_arg.h  color_init.h  globals.h  gui.h  server.h  word_data.h
src/: color_init.c  game.c  gui.c  wordgame.c
